# Warehouse-simulator

./: .gitignore  CMakeLists.txt  README.md  dokumentacja
cmake/: add_ut.cmake
docs/doxygen/docbook/: _event_8cpp.xml  _event_8cpp_source.xml  _event_8h.xml  _event_8h_source.xml  _event_test_8cpp.xml  _event_test_8cpp_source.xml  _product_8cpp.xml  _product_8cpp_source.xml  _product_8h.xml  _product_8h_source.xml  _product_test_8cpp.xml  _product_test_8cpp_source.xml  _report_8cpp.xml  _report_8cpp_source.xml  _report_8h.xml  _report_8h_source.xml  _report_test_8cpp.xml  _report_test_8cpp_source.xml  _sales_report_8cpp.xml  _sales_report_8cpp_source.xml  _sales_report_8h.xml  _sales_report_8h_source.xml  _sales_report_test_8cpp.xml  _sales_report_test_8cpp_source.xml  _simulation_8cpp.xml  _simulation_8cpp_source.xml  _simulation_8h.xml  _simulation_8h_source.xml  _simulation_test_8cpp.xml  _simulation_test_8cpp_source.xml  _storage_8cpp.xml  _storage_8cpp_source.xml  _storage_8h.xml  _storage_8h_source.xml  _storage_test_8cpp.xml  _storage_test_8cpp_source.xml  _warehouse_8cpp.xml  _warehouse_8cpp_source.xml  _warehouse_8h.xml  _warehouse_8h_source.xml  (+50 more)
docs/doxygen/html/: _event_8cpp.html  _event_8cpp_source.html  _event_8h.html  _event_8h.js  _event_8h_source.html  _event_test_8cpp.html  _event_test_8cpp.js  _event_test_8cpp_source.html  _product_8cpp.html  _product_8cpp_source.html  _product_8h.html  _product_8h.js  _product_8h_source.html  _product_test_8cpp.html  _product_test_8cpp.js  _product_test_8cpp_source.html  _r_e_a_d_m_e_8md.html  _report_8cpp.html  _report_8cpp_source.html  _report_8h.html  _report_8h.js  _report_8h_source.html  _report_test_8cpp.html  _report_test_8cpp.js  _report_test_8cpp_source.html  _sales_report_8cpp.html  _sales_report_8cpp_source.html  _sales_report_8h.html  _sales_report_8h.js  _sales_report_8h_source.html  _sales_report_test_8cpp.html  _sales_report_test_8cpp.js  _sales_report_test_8cpp_source.html  _simulation_8cpp.html  _simulation_8cpp_source.html  _simulation_8h.html  _simulation_8h.js  _simulation_8h_source.html  _simulation_test_8cpp.html  _simulation_test_8cpp.js  (+131 more)
docs/doxygen/latex/: _event_8cpp.tex  _event_8cpp_source.tex  _event_8h.tex  _event_8h_source.tex  _event_test_8cpp.tex  _event_test_8cpp_source.tex  _product_8cpp.tex  _product_8cpp_source.tex  _product_8h.tex  _product_8h_source.tex  _product_test_8cpp.tex  _product_test_8cpp_source.tex  _report_8cpp.tex  _report_8cpp_source.tex  _report_8h.tex  _report_8h_source.tex  _report_test_8cpp.tex  _report_test_8cpp_source.tex  _sales_report_8cpp.tex  _sales_report_8cpp_source.tex  _sales_report_8h.tex  _sales_report_8h_source.tex  _sales_report_test_8cpp.tex  _sales_report_test_8cpp_source.tex  _simulation_8cpp.tex  _simulation_8cpp_source.tex  _simulation_8h.tex  _simulation_8h_source.tex  _simulation_test_8cpp.tex  _simulation_test_8cpp_source.tex  _storage_8cpp.tex  _storage_8cpp_source.tex  _storage_8h.tex  _storage_8h_source.tex  _storage_test_8cpp.tex  _storage_test_8cpp_source.tex  _warehouse_8cpp.tex  _warehouse_8cpp_source.tex  _warehouse_8h.tex  _warehouse_8h_source.tex  (+57 more)
docs/doxygen/rtf/: dir_041e6991085cae880e75aa845de990e7.rtf  dir_11a62a6baf0a40c6566461cad28c37c3.rtf  dir_13e138d54eb8818da29c3992edef070a.rtf  dir_15f30029a8909ed3f59c87794e60d5e7.rtf  dir_1c9a8d3a878218fce437b9e8ab1a0a60.rtf  dir_1d5b92995486d5a4019a0f8ee18ed974.rtf  dir_223f32cc89cd3418fc837e1cc2b02301.rtf  dir_2dfb497bfc5e22987e950bb3bd899ae8.rtf  refman.rtf  (+11 more)
docs/latex/: main.tex
src/: CMakeLists.txt  main.cpp
src/Event/: CMakeLists.txt  Event.cpp  Event.h
src/Product/: CMakeLists.txt  Product.cpp  Product.h
src/Report/: CMakeLists.txt  Report.cpp  Report.h
src/SalesReport/: CMakeLists.txt  SalesReport.cpp  SalesReport.h
src/Simulation/: CMakeLists.txt  Simulation.cpp  Simulation.h
src/Storage/: CMakeLists.txt  Storage.cpp  Storage.h
src/Warehouse/: CMakeLists.txt  Warehouse.cpp  Warehouse.h
src/WarehouseReport/: CMakeLists.txt  WarehouseReport.cpp  WarehouseReport.h
src/gui/: CMakeLists.txt  gui.cpp  gui.h  gui.ui
test/: CMakeLists.txt  main.cpp
test/Event/: CMakeLists.txt  EventTest.cpp
test/Product/: CMakeLists.txt  ProductTest.cpp
test/Report/: CMakeLists.txt  ReportTest.cpp
test/SalesReport/: CMakeLists.txt  SalesReportTest.cpp
test/Simulation/: CMakeLists.txt  SimulationTest.cpp
test/Storage/: CMakeLists.txt  StorageTest.cpp
test/Warehouse/: CMakeLists.txt  WarehouseTest.cpp
test/WarehouseReport/: CMakeLists.txt  WarehouseReportTest.cpp
(+177 files in other folders)
